--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -r test_requirements.txt
 
 script:
-  - coverage run --source="storj-kademlia" setup.py test
+  - coverage run --source="storjkademlia" setup.py test
 
 after_success:
   - coveralls
